Move check out reminders and invite team trails through the dropdown menu instead of the navigation sidebar bottom to make sure they are more visible.

--- a/scss/partials/_org_settings.scss
+++ b/scss/partials/_org_settings.scss
@@ -340,6 +340,10 @@ div.org-settings-tabs {
     margin: 1px 24px 0px 0px;
     border-bottom: 1px solid transparent;
 
+    a.qsg-invite-team-3 {
+      position: relative;
+    }
+
     a.org-settings-tab-link {
       display: block;
       width: auto;
