--- a/scss/partials/_qsg_breadcrumb.scss
+++ b/scss/partials/_qsg_breadcrumb.scss
@@ -10,41 +10,41 @@ div.qsg-breadcrumb {
   transition: opacity 180ms;
   opacity: 0;
 
-  &.profile-photo-1, &.company-logo-1 {
+  // Top of dropdown menu button
+  &.profile-photo-1, &.company-logo-1, &.invite-team-1, &.create-reminder-1{
     animation: topSwing .8s infinite linear;
     top: 50px;
   }
 
-  &.profile-photo-2, &.company-logo-2 {
+  // Inside dropdown menu
+  &.profile-photo-2, &.company-logo-2, &.invite-team-2, &.create-reminder-2 {
     left: -37px;
     animation: leftSwing .8s infinite linear;
     top: 8px;
   }
 
+  // Org settings panel
+  &.invite-team-3 {
+    top: -12px;
+    right: -32px;
+    animation: rightSwing .8s infinite linear;
+  }
+
+  // Prg settings and profile settings
   &.profile-photo-3, &.company-logo-3,  {
     animation: leftSwing .8s infinite linear;
     left: -37px;
     top: 8px;
   }
 
-  &.invite-team-1 {
-    animation: leftSwing .8s infinite linear;
-    left: -37px;
-    top: 0;
-  }
-
+  // New button
   &.create-post-1 {
     animation: leftSwing .8s infinite linear;
     left: -37px;
     top: 4px;
   }
 
-  &.create-reminder-1 {
-    animation: leftSwing .8s infinite linear;
-    left: -37px;
-    top: 0;
-  }
-
+  // Navigation sidebar plus button
   &.add-section-1 {
     animation: rightSwing .8s infinite linear;
     right: -38px;
